fix the submenu alignment

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -216,10 +216,10 @@ select {
 
 .shade {
   text-align: right;
-  background: var(--dark-gray);
+  background: var(--blue);
   color: var(--off-white);
   padding: 16px;
-  margin-bottom: 32px;
+  /* margin-bottom: 32px; */
   box-shadow: 0 16px 8px rgba(0, 0, 0, .2);
   display: none;
   font-size: 16px;
@@ -228,6 +228,7 @@ select {
 .shade.show {
   animation: slide-down 800ms;
   display: block;
+  width: 100%;
 }
 
 .shade form {
